--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>EnRoll Me</title>
+  <meta name="google-signin-client_id" content="898385406882-7hd28m6gk0r55ab8hpo557p44hi8l9j4.apps.googleusercontent.com	">
+  <meta name="google-signin-client_id" content="898385406882-7hd28m6gk0r55ab8hpo557p44hi8l9j4.apps.googleusercontent.com">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- Latest compiled and minified CSS -->
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"> -->
+  <link href="bootstrap-social.css" type="text/css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?rd5re8"> -->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Antic+Slab|Cabin|Cagliostro|Josefin+Sans|Julius+Sans+One|Kameron|News+Cycle|Raleway|Scope+One|Text+Me+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,21 +20,46 @@
 </head>
 
 <body onload="initMap()">
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10&appId=1396338423796632";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
   <header>
     <nav class="navFoot">
       <div id="hamburger"><i class="dehaze material-icons">dehaze</i></div>
-      <div><i class="search material-icons">search</i></div>
+      <div id="searchIcon"><i class="search material-icons">search</i></div>
       <div class="textInput">
         <form id="textForm">
           <input id="textInput" type="text" class="orgs" placeholder="Search Enroll Me">
         </form>
       </div>
       <div id="cityId">
-        Denver
+        <span id="leftcityBorder"></span>Denver<span id="rightcityBorder"></span>
       </div>
-      <div></div>
       <div id="navLogo" class="nav">Enroll Me</div>
-      <div id="faq" class="nav navLinks">What's an SPF?</div>
+      <div id="faq" class="nav navLinks">FAQ</div>
+      <div id="auth">Sign In</div>
+      <div id="socialLogIn">
+        <a id="facebookA" href="/auth/facebook" class="btn btn-block btn-social btn-facebook">
+          <span id="fLogo" class="buttonLogo fa fa-facebook"></span><span class='buttonText'>Sign in with Facebook</span>
+        </a>
+        <a id="googleA" href="/auth/google" class="btn btn-block btn-social btn-google">
+          <span id="gLogo" class="buttonLogo fa fa-google"></span><span class='buttonText'>Sign in with Google</span>
+        </a>
+        <!-- <a id="twitterA" href="/auth/twitter" class="btn btn-block btn-social btn-twitter">
+        <span id="tLogo" class="buttonLogo fa fa-twitter"></span><span class='buttonText'>Sign in with Twitter</span>
+        </a>
+        <a id="yahooA" href="/auth/yahoo" class="btn btn-block btn-social btn-yahoo">
+        <span id="yLogo" class="buttonLogo fa fa-yahoo"></span><span class='buttonText'>Sign in with Yahoo</span>
+        </a> -->
+      </div>
     </nav>
   </header>
   <main id="wrapper">
@@ -38,19 +71,7 @@
       <div></div>
       <div></div>
       <div></div>
-
     </div>
-    <!-- <div id="graphicChecks">
-      <span class="personIcon personElem material-icons">person</span>
-      <span class="personIcon personMiddle material-icons">person</span>
-      <span class="personIcon personHigh material-icons">person</span>
-      <span class="schoolSize material-icons">school</span>
-      <span class="schoolSize material-icons">school</span>
-      <span class="schoolSize material-icons">school</span>
-      <span class="schoolSize material-icons">school</span>
-      <span class="schoolSize material-icons">school</span>
-
-    </div> -->
     <section id="forms">
       <div class="inputs" id="checkboxes">
         <form id="formType">
@@ -72,6 +93,7 @@
 
   <footer>
   </footer>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNgmWThTz7CQukzdOg7fSe_aJLCXnPTVM&callback=initMap"></script>
