--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,10 @@
       <div id="faq" class="nav navLinks">FAQ</div>
       <div id="auth">Sign In</div>
       <div id="socialLogIn">
-        <a id="facebookA" href="/auth/facebook" class="btn btn-block btn-social btn-facebook">
+        <a id="facebookA" href="https://warm-waters-71689.herokuapp.com/auth/facebook" class="btn btn-block btn-social btn-facebook">
           <span id="fLogo" class="buttonLogo fa fa-facebook"></span><span class='buttonText'>Sign in with Facebook</span>
         </a>
-        <a id="googleA" href="/auth/google" class="btn btn-block btn-social btn-google">
+        <a id="googleA" href="https://warm-waters-71689.herokuapp.com/auth/google" class="btn btn-block btn-social btn-google">
           <span id="gLogo" class="buttonLogo fa fa-google"></span><span class='buttonText'>Sign in with Google</span>
         </a>
         <!-- <a id="twitterA" href="/auth/twitter" class="btn btn-block btn-social btn-twitter">
